[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dash-json-grid"
authors = [{ name = "Yuchen Jin", email = "cainmagi@gmail.com" }]
maintainers = [{ name = "Yuchen Jin", email = "cainmagi@gmail.com" }]
dynamic = [
  "version",
  "readme",
  "description",
  "classifiers",
  "dependencies",
  "optional-dependencies",
]
keywords = [
  "python",
  "python3",
  "python-library",
  "dash",
  "plotly-dash",
  "python-dash",
  "json",
  "json-viewer",
  "json-table",
  "data-visualization",
]
license = { text = "MIT License" }
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/cainmagi/dash-json-grid"
Documentation = "https://cainmagi.github.io/dash-json-grid/"
Repository = "https://github.com/cainmagi/dash-json-grid.git"
Issues = "https://github.com/cainmagi/dash-json-grid/issues"
Changelog = "https://github.com/cainmagi/dash-json-grid/blob/main/Changelog.md"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "version.__version__" }
description = { file = "py-description.txt" }
readme = { file = ["README.md"], content-type = "text/markdown" }
classifiers = { file = "classifiers.txt" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = ["requirements-dev.txt"] }
test = { file = ["tests/requirements.txt"] }
example = { file = ["examples/requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["dash_json_grid"]
exclude = ["src", "version", "docker", "tests*", "examples*", "docs*"]
namespaces = false

[tool.black]
line-length = 88
include = '\.pyi?$'
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
  ^/dash_json_grid/_imports_.py
  |^/dash_json_grid/DashJsonGrid.py
  |^/_validate_init.py
  |^/docs
)
'''

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests/"
addopts = "-rsxX -vv"
log_level = "INFO"
log_format = "%(name)s | %(filename)s - %(funcName)s @ %(asctime)s: %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "INFO"
selenium_exclude_debug = "html:logs:screenshot"
filterwarnings = ["ignore::DeprecationWarning:selenium"]

[tool.pyright]
include = ["./usage.py", "dash_json_grid", "tests"]
exclude = [
  "**/node_modules",
  "**/__pycache__",
  "src",
  "alpha-*",
  "data-*",
  "logs",
  "outputs",
  "docs",
  ".VSCodeCounter",
  ".github",
  ".git",
  ".yarn",
  "deps",
  "inst/deps",
  "man",
  "R",
  "src",
  "env",
  "ENV",
  "venv",
  "VENV",
  ".env",
  ".venv",
  "database",
  "**/.yarn",
  "**/node_modules",
  "**/__pycache__",
  "typestubs",
  "setup.py",
  "version",
  "_validate_init.py",
]
ignore = ["version", "setup.py", "_validate_init.py"]
defineConstant = { DEBUG = true }
reportMissingImports = "error"
reportMissingTypeStubs = false
